--- a/pythonBackend/static/index.html
+++ b/pythonBackend/static/index.html
@@ -4,36 +4,124 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="iziToast.min.css" />
+    <script src="dist/js/iziToast.min.js" type="text/javascript"></script>
+
+    <title>CCcam</title>
   </head>
   <body>
-    Live Streamer
-    <img width="500" height="500" id="screen" />
-    <button onclick="savedata()">Save data</button>
-    <button onclick="stopsavedata()">Stop Save data</button>
+    <div
+      class="flex min-w-full bg-slate-800 justify-center min-h-screen items-center"
+    >
+      <div class="w-fit bg-slate-200">
+        <div class="flex justify-between px-8 py-4">
+          <h2 class="text-xl font-bold">Feed</h2>
+          <span id="live" class="text-red-600"></span>
+        </div>
+        <img width="500" height="500" id="screen" />
+        <div class="w-full flex justify-center pt-4">
+          <div class="border-2 border-gray-500 px-4 py-2 rounded-2xl">
+            <i
+              class="fa-solid fa-camera text-3xl cursor-pointer"
+              onclick="takeASnap()"
+            ></i>
+          </div>
+        </div>
+
+        <div class="h-10 pl-4">
+          <span id="motion_sensor" class="text-green-700"></span>
+        </div>
+      </div>
+    </div>
 
     <script>
-      //   var baseHost = document.location.origin;
-      const WS_URL = "ws://" + "localhost" + ":5000/viewer";
-      const ws = new WebSocket(WS_URL);
+      // iziToast.settings({
+      //   timeout: 1000,
+      //   resetOnHover: true,
+      //   icon: "material-icons",
+      //   transitionIn: "flipInX",
+      //   transitionOut: "flipOutX",
+      //   onOpening: function () {
+      //     console.log("callback abriu!");
+      //   },
+      //   onClosing: function () {
+      //     console.log("callback fechou!");
+      //   },
+      // });
+
+      let isAuthenticated = false;
+      const WS_URL = "ws://" + window.location.hostname + ":5000/viewer";
+      let ws = new WebSocket(WS_URL);
+      const live = document.getElementById("live");
+      let lastLiveActive = null;
+      const screen = document.getElementById("screen");
+
+      let mode = "remote";
 
       ws.onmessage = (message) => {
         console.log("message received");
         if (message.data instanceof Blob) {
           var urlObject = URL.createObjectURL(message.data);
-          const screen = document.getElementById("screen");
           screen.src = urlObject;
-          console.log(urlObject);
+          live.innerHTML = "●Live";
         } else {
-          const screen = document.getElementById("screen");
           const jsonData = JSON.parse(message.data);
-          screen.src = "data:image/png;base64," + jsonData.frame;
-          // console.log(message);
+          console.log(jsonData);
+
+          if (jsonData.hasOwnProperty("motiondetected")) {
+            let motion_sensor = document.getElementById("motion_sensor");
+            motion_sensor.innerHTML = "Motion Detected";
+            setTimeout(() => {
+              motion_sensor.innerHTML = "";
+            }, 2000);
+          }
+          if (jsonData.hasOwnProperty("lastLiveActive")) {
+            lastLiveActive = jsonData.lastLiveActive;
+            console.log(lastLiveActive);
+          }
+          if (jsonData.hasOwnProperty("error")) {
+            alert(jsonData["error"]);
+          }
         }
       };
+
+      function loop() {
+        const curr_time = new Date().getTime();
+        if (curr_time - 1000 * 3 > lastLiveActive) {
+          live.innerHTML = "";
+        }
+
+        if (isAuthenticated == false) {
+        }
+      }
+
+      setInterval(() => {
+        loop();
+      }, 2000);
+
       ws.onopen = () => {
-        ws.send(JSON.stringify({ viewer: "yes" }));
+        let authPrompt = prompt("Enter Authentication code");
+        ws.send(JSON.stringify({ authentication: authPrompt }));
       };
+      ws.onclose = () => {
+        // alert("Disconnected from server");
+        // ws = new WebSocket(WS_URL);
+        iziToast.show({
+          title: "Disconnected:(",
+          message: "Refresh the page to retry",
+          position: "topCenter",
+          color: "red",
+        });
+      };
+
       function savedata() {
         ws.send(JSON.stringify({ viewer: "yes", saveData: true, start: true }));
       }
@@ -41,6 +129,14 @@
         ws.send(
           JSON.stringify({ viewer: "yes", saveData: true, start: false })
         );
+      }
+
+      function takeASnap() {
+        if (mode == "remote") {
+          const ENDPOINT = "http://192.168.29.238" + ":5000/takeasnap";
+          console.log(ENDPOINT);
+          fetch(ENDPOINT, { method: "GET" });
+        }
       }
     </script>
   </body>
